--- a/Index.html
+++ b/Index.html
@@ -6,12 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Centro Médico Ñuñoa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <script>
-        document.write('<p>Estadisticas centro medico ñuñoa</p>');
-    </script>
+    <h1 class="text-center bg-danger">Horas clinica</h1>
+    <p id="radiologias"></p>
+    <table class="table table-primary">
+        <thead>
+            <tr>
+                <th scope="col">Hora</th>
+                <th scope="col">Especialista</th>
+                <th scope="col">Paciente</th>
+                <th scope="col">Rut</th>
+                <th scope="col">Previsión</th>
+            </tr>
+        </thead>
+        <tbody id="tablaradiologias">
+        </tbody>
+    </table>
+    <p id="traumatologias"></p>
+    <table class="table table-secondary">
+        <thead>
+            <tr>
+                <th scope="col">Hora</th>
+                <th scope="col">Especialista</th>
+                <th scope="col">Paciente</th>
+                <th scope="col">Rut</th>
+                <th scope="col">Previsión</th>
+            </tr>
+        </thead>
+        <tbody id="tablatraumatologias">
+        </tbody>
+    </table>
+    <p id="dentales"></p>
+    <table class="table table-success">
+        <thead>
+            <tr>
+                <th scope="col">Hora</th>
+                <th scope="col">Especialista</th>
+                <th scope="col">Paciente</th>
+                <th scope="col">Rut</th>
+                <th scope="col">Previsión</th>
+            </tr>
+        </thead>
+        <tbody id="tabladentales">
+        </tbody>
+    </table>
+
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
